fixed the contact form but not finished yet, and fixed the sidebar nav on the learn page so it's stuck at the top to avoid colliding with footer

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -187,9 +187,13 @@ nav {
 
 .hero-container {
   display: flex;
-  justify-content: space-evenly;
+  justify-content: space-between;
   font-family: bemio;
   padding: 3rem;
+}
+
+.twitter-container {
+  background-color: rgb(49, 51, 53);
 }
 
 /* blog page */
@@ -203,20 +207,24 @@ nav {
   border: blue;
   display: flex;
   flex-direction: column;
-  margin: 3rem;
+  /* margin: 3rem; */
+  max-width: 600px;
+  margin: 1em auto;
 }
 
 /* learn more page */
 /* sidenav not to be confused with the popout sidenav for small screens */
 .sidenav {
   width: 250px;
-  position: fixed;
+  position: absolute;
   z-index: 1;
   /* top: 0; */
   left: 0;
   /* background-color: lightblue; */
   overflow-x: hidden;
+  margin-top: 2rem;
   padding-top: 20px;
+  padding-bottom: 20px;
   box-shadow: 2px 4px 4px 4px lightgray;
 }
 
@@ -229,12 +237,12 @@ nav {
 }
 
 .sidenav a:hover {
-  color: #f1f1f1;
-  text-shadow: 2px 4px 4px black;
+  color: #fc4385;
+  /* text-shadow: 2px 4px 4px black; */
 }
 
 .main {
-  margin-left: 250px;
+  margin: 5rem 10rem 5rem 20rem;
   padding: 0px 10px;
 }
 
@@ -287,6 +295,7 @@ footer {
 
 .font-credit a {
   color: ivory;
+  font-family: 'Courier New', Courier, monospace;
 }
 
 /* .fab {
@@ -295,33 +304,41 @@ footer {
 
 /* contact form */
 
-.container {
-  padding-bottom: 100px;
+.contact-container {
+  padding-bottom: 5rem;
+  padding-top: 5rem;
+}
+
+.contact-container h4 {
+  color: black;
+  font-weight: 400;
+  font-size: 20px;
+  line-height: 1.5;
+  padding-bottom: 1rem;
+}
+
+.contact-container form {
+  display: block;
 }
 
 .contact-div {
-  padding-bottom: 100px;
-  background-color: #00667a;
+  padding-bottom: 5rem;
+  background-color: lightslategrey;
+  box-shadow: lightslategrey;
   width: 50vw;
-  border-radius: 15px;
+  border-radius: 5px;
   display: block;
-  margin-right: auto;
-  margin-left: auto;
+  /* margin-right: auto;
+  margin-left: auto; */
+  float: right;
 }
 
 .contact-me-header {
-  font-family: 'Poppins', sans-serif, 'arial';
+  color: #ffbd51;
+  font-family: bemio;
   font-weight: 600;
   font-size: 45px;
   text-align: center;
-}
-
-h4 {
-  font-family: 'Roboto', sans-serif, 'arial';
-  font-weight: 400;
-  font-size: 20px;
-  color: #9b9b9b;
-  line-height: 1.5;
 }
 
 /* .email-link {
